# ckks_he

./: .gitignore  Cargo.toml  LICENSE.md  README.md
benches/: full_bench.rs
docs/: .rustc_info.json
docs/debug/.fingerprint/autocfg-5f0e3bea47b873da/: lib-autocfg  lib-autocfg.json
docs/debug/.fingerprint/bnum-dbf31b1b7d82b837/: lib-bnum  lib-bnum.json
docs/debug/.fingerprint/cfg-if-99a6221ed22cb7f5/: lib-cfg-if  lib-cfg-if.json
docs/debug/.fingerprint/ckks_he-4064cc2eb9ec9ad5/: doc-lib-ckks_he  doc-lib-ckks_he.json  output-doc-lib-ckks_he
docs/debug/.fingerprint/getrandom-3ad65f1759a1ff70/: lib-getrandom  lib-getrandom.json
docs/debug/.fingerprint/libc-76da3428c9fb4f73/: run-build-script-build-script-build  run-build-script-build-script-build.json
docs/debug/.fingerprint/libc-b09c8ded729efeb5/: build-script-build-script-build  build-script-build-script-build.json
docs/debug/.fingerprint/libc-f314813fc684ca26/: lib-libc  lib-libc.json
docs/debug/.fingerprint/libm-32cd5f97e2dd9ec1/: run-build-script-build-script-build  (+1 more)
docs/doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
docs/doc/ckks_he/: all.html  index.html  sidebar-items.js
src/: ciphertext.rs  encoding.rs  keys.rs  lib.rs  main.rs  random_distributions.rs
src/algebra/: arithmetic.rs  big_int.rs  checked_polynomial.rs  complex.rs  conversion_rounding.rs  cyclotomic_ring.rs  linear_algebra.rs  mod.rs  ntt.rs  polynomial.rs
src/keys/: client_key.rs  evaluation_key.rs  key_generator.rs  mod.rs  public_key.rs  secret_key.rs  server_key.rs
(+142 files in other folders)
