[package]
name = "ckks_he"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bnum = { version = "0.11.0", features = ["rand"] } 
rand = "0.8"
rand_distr = "0.4"

[lib]
name = "ckks_he"
path = "src/lib.rs"

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
name = "full_bench"
harness = false